vm-instance/firewalls.tf
# Firewall Rule: SSH
resource "google_compute_firewall" "fw_ssh" {
  name = "${local.name}-fwrule-allow-ssh22"
  allow {
    ports    = ["22"]
    protocol = "tcp"
  }
  direction     = "INGRESS"
  #network       = google_compute_network.myvpc.id 
  network       = module.vpc.network_id
  priority      = 1000
  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["ssh-tag"]
}

# Firewall Rule: HTTP Port 80
resource "google_compute_firewall" "fw_http" {
  name = "${local.name}-fwrule-allow-http80"
  allow {
    ports    = ["80"]
    protocol = "tcp"
  }
  direction     = "INGRESS"
  #network       = google_compute_network.myvpc.id 
  network       = module.vpc.network_id
  priority      = 1000
  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["webserver-tag"]
}
# Firewall Rule: Allow All Access
resource "google_compute_firewall" "fw_allow_all" {
  name          = "${local.name}-fwrule-allow-all"
  direction     = "INGRESS"
  network       = module.vpc.network_id
  priority      = 1000
  source_ranges = ["0.0.0.0/0"]

  allow {
    protocol = "all"
  }

  target_tags = ["allow-all-tag"]
}
